# OpenGL-Template

./: .gitmodules  CMakeLists.txt
ProjectName/src/: main.c
